--- a/level-1/step-1/step-1.css
+++ b/level-1/step-1/step-1.css
@@ -1,32 +1,33 @@
 .header {
-    width: 100%;
-    height: 100px;
-    background: #D8D8D8;
+  width: 100%;
+  height: 100px;
+  background: #d8d8d8;
 }
 
-/* I would suggest using float to get this container in its desired location. */
+/* Position content-left to the left of screen */
 
 .content-left {
-    width: 34%;
-    /* This height is a placeholder. You will need to make some adjustments to get this container to look like the design. */
-    height: 100px;
-    background: #565555;
+  width: 34%;
+  height: calc(100vh - 200px);
+  background: #565555;
+  float: left;
 }
 
-
-/* I would suggest using float to get this container in its desired location. */
+/* Position content-mid to the right of content left. Make this container take up the remaining width of the screen */
 
 .content-mid {
-    width: 66%;
-    /* This height is a placeholder. You will need to make some adjustments to get this container to look like the design. */
-    height: 100px;
-    background: #B0B0B0;
+  width: 66%;
+  height: calc(100vh - 200px);
+  background: #b0b0b0;
+  float: right;
 }
 
-/* I would suggest using position to get this container to the bottom of the screen  */
+/* Position footer at the bottom of screen */
 
 .footer {
-    width: 100%;
-    height: 100px;
-    background: #3A3A3A;
+  width: 100%;
+  height: 100px;
+  background: #3a3a3a;
+  position: absolute;
+  bottom: 0;
 }
