--- a/level-2/step-2/step-2.css
+++ b/level-2/step-2/step-2.css
@@ -1,34 +1,31 @@
 /* Step-2 add a text-align that will align items in the center.  */
 .main-bottom-section {
   margin-top: 65px;
-  /* alignment property */
+  text-align: center;
 }
 
 /* Step-2 Add a width, height and display property to make these containers look like the design. */
 .item {
-   /*width*/
-    /*height*/
-    /*display*/
-    margin: 0 20px 30px;
-    background: #DED6D3;
-    margin-bottom: 30px;
+  width: calc(50vw - 51px);
+  height: 200px;
+  display: inline-block;
+  margin: 0 20px 30px;
+  background: #ded6d3;
+  margin-bottom: 30px;
 }
 
 /* Step-2 Add a width, height, and margin property to make these containers look like the design. Remember margin: auto is helpful when trying to center a container. */
 .full-width-item {
-    /*width*/
-    /*height*/
-    /*margin*/
-    margin:0 auto 30px;
-    background: #DED6D3;
+  width: calc(100vw - 50px);
+  height: 200px;
+  margin: 0 auto 30px;
+  background: #ded6d3;
 }
 
 /* Step-2 Add a width, height, and margin property to make these containers look like the design. Remember margin: auto is helpful when trying to center a container. */
 .large-item {
-    /*width*/
-    /*height*/
-    /*margin*/
-    background: #DED6D3;
+  width: calc(100vw - 50px);
+  height: 400px;
+  margin: 0 auto 30px;
+  background: #ded6d3;
 }
-
-
